...
      "title": "Deeplink failed",
      "description": "The link you entered is invalid. Please verify the link once more, click continue to Home to access the wallet.",
      "continueButtonText": "Continue to home"
    }
  },
  "intro" : {
    "manageAccountsTitle": "Manage accounts",
    "manageAccountsDescription": "Creating an account is your first step in benefiting from blockchain technology. Create and manage several accounts on Lisk Mobile.",
    "sendAndRequestTokensTitle": "Send and request tokens",
    "sendAndRequestTokensDescription": "Securely send and request tokens within and across blockchain applications.",    
    "manageApplicationsTitle": "Manage blockchain application assets",
    "manageApplicationsDescription": "You can manage several blockchain application assets (claim tokens, NFTs, etc..) using your accounts.",
    "skipButton": "Skip",
    "nextButton": "Next",
    "continueToAddAccountButton": "Continue to add account",
    "continueToCreateAccountButton": "Continue to account creation"
  },
  "Activity": "Activity",
  "Add to bookmarks": "Add to bookmarks",  
  "Amount": "Amount",
  "Status": "Status",
...
      "cancelButton": "Cancel"
    },
    "disabled": {
      "title": "Disabled Bookmark",
      "description": "This bookmark is associated with a legacy account and can no longer be used.",
      "buttons": {
        "close": "Got it"
      }
    }
  },
  "banners": {
    "btcRemoval": {
      "title": "Please note: BTC support has been removed as of Lisk Mobile {{release}}",
...
        "nameSpaceInvalid": "Error validating connection. Please try again."
      }
    }
  },
  "requestTokens": {
    "title": "Request token",
    "recipient": "Recipient",
    "recipientApplication": "Recipient Application",
    "selectApplication": "Select Application",
    "selectToken": "Select Token",
    "token": "Token"
  },
  "sendToken": {
...
  },
  "transactions": {
    "transactionDetails": {
      "loadingText": "Loading transaction...",
      "errorText": "Error loading transaction details.",
      "title": "Transaction details",
      "senderLabel": "Sender",
      "recipientLabel": "Recipient",
      "transactionFeeLabel": "Transaction fee",
      "nonceLabel": "Nonce",
      "statusLabel": "Status",
      "transactionIDLabel": "Transaction ID",
      "blockIDLabel": "Block ID",
...
