...
        </PrimaryButton>
      </View>
    );
  };

  return (
    <SafeAreaView style={[styles.container, styles.theme.container]} testID="intro-screen">
      <Slider
        data={slides}
        renderController={renderFooter}
        style={{ container: { flex: 1 }, slide: { title: { maxWidth: 300 } } }}
      />
    </SafeAreaView>
...
