...
    return (
      <SafeAreaView style={styles.wrapper}>
        <View style={styles.container}>
          <View style={styles.body}>
            <View style={styles.passphraseContainer}>
              <P style={styles.passphraseTitle}>{t('Store your passphrase carefully')}</P>
              <Text style={styles.passphrase} testID="passphraseText">
                {passphrase.replace(/\s+/g, '  ')}
              </Text>
              <CopyToClipboard
                style={styles.copyContainer}
                labelStyle={styles.copy}
                iconStyle={styles.copy}
...
              />
              <P style={styles.confirmText}>{t('I understand that it’s my responsibility to keep my passphrase safe.')}</P>
            </View>
            <View>
              <PrimaryButton
                disabled={!this.state.confirmed}
                testID="registerSafeKeepingButton"
                style={styles.button}
                noTheme={true}
                onClick={this.forward}
                title={t('I wrote it down')} />
            </View>
          </View>
...
