...
                  : <View style={styles.optionPlaceholder} />}
              </View>
            </View>
          </View>
          <View style={[styles.buttonWrapper, styles.horizontalPadding]}>
            <PrimaryButton
              testID="registerConfirmButton"
              disabled={this.state.buttonStatus}
              noTheme={true}
              style={styles.button}
              onClick={() => nextStep({ passphrase })}
              title={t('Confirm')}
            />
...
