...
                    <Switch
                      height={26}
                      width={43}
                      onSyncPress={(status) => setIsConfirmed(status)}
                      backgroundActive={colors.light.ultramarineBlue}
                      backgroundInactive={colors.light.platinum}
                      testID="sliderButton"
                    />
                    <P style={styles.confirmationText}>
                      {i18next.t('I have read and agreed with the')}

                      <A onPress={handleTermsAndConditionsClick} style={styles.link}>
                        &nbsp;{i18next.t('terms and conditions.')}
...
                )}

                <PrimaryButton
                  disabled={slide.acceptTermsSwitch && !isConfirmed}
                  style={styles.button}
                  onClick={() => handleSubmit(slide)}
                  testID="continueButton"
                >
                  {i18next.t('commons.buttons.continue')}
                </PrimaryButton>
              </View>
            )}
          </View>
...
