...
            {t('The official Lisk mobile wallet.')}
          </Title>
        )}

        <Animated.View style={[{ opacity }]}>
          <Input
            testID="signInPassphraseInput"
            noTheme={true}
            label={t('Passphrase')}
            reference={ref => {
              this.passphraseInput = ref;
            }}
            innerStyles={{
...
          />
        </Animated.View>

        <KeyboardAwareScrollView
          noTheme={true}
          button={t('Sign in')}
          buttonTestID="signInButton"
          onSubmit={this.onFormSubmission}
          extraContent={
            <CreateAccount
              style={styles.createAccountWrapper}
              onPress={this.goToRegistration}
              opacity={opacity}
...
