...
                type={P}
              />
            </View>
            <Avatar address={account.address} size={51} />
          </View>
          <View style={[styles.balanceRow]}>
            <P style={styles.theme.copy}>{t('Balance')}</P>
            <FormattedNumber
              tokenType={token.active}
              style={[styles.walletBalance, styles.theme.walletBalance]}
              type={B}
              language={language}
            >
...
            <Icon
              name="send"
              size={18}
              style={styles.sendIcon}
              color={theme === themes.light ? colors.light.zodiacBlue : colors.dark.white}
            />
            <P style={styles.theme.send}>{t('Send LSK')}</P>
          </TouchableOpacity>
        </View>
      </AView>
    );
  }
}
...
